@@ -1,3 +1,8 @@
+2000-03-17  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* clookup.c (file_name_lookup_carefully): Don't use MOVE_SEND in
+	Hurd RPC.
+
 1999-12-03  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* MAKEDEV.sh (mkdev: full): New device, using /hurd/null --full.
